--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <form class="d-sm-flex  width-25%" >
           <input class="form-control ms-1 "  placeholder="language ">
-          <button class="btn__form btn__form-outline-dark fw-bold rounded-pill" type="submit">Change</button>
+          <button class="btn__form  btn__form-danger btn__form-outline-dark fw-bold rounded-pill" type="submit">Change</button>
         </form>
       
   </nav>
@@ -40,7 +40,7 @@
     <div class="content   ms-2 ">
     <h1>BUY & <br>SELL <span id="yes">Crypto</span></br></h1>
     <p>World's biggest cryptocurrency exchange available on web <br>as well as mobile phone</p>
-    <span class="span bg-warning .border-spill .text-reset-warning  ms-auto rounded-1">Explore More</span>
+    <button class="btn___form bg-warning .border-spill .text-reset-warning  ms-auto rounded-1" > <a href="#"></a>Explore More</button>
 </div>
 
 <div class="coin-list mb-5">
